[package]
authors = ["Chloe Bethel <me@chloe-is.online>"]
build = "build.rs"
categories = ["external-ffi-bindings", "filesystem", "os::unix-apis"]
description = "Low level bindings for libext2fs (e2fsprogs/e2fslibs), providing functionality for ext2/ext3/ext4 filesystems"
edition = "2021"
homepage = "https://github.com/francium-os/ext2fs-sys/"
keywords = ["e2fsprogs", "e2fslibs", "ext2", "ext3", "ext4"]
license = "MIT"
name = "ext2fs-sys"
links = "ext2fs"
publish = ["crates-io"]
readme = "README.md"
repository = "https://github.com/francium-os/ext2fs-sys.git"
version = "0.1.0"

[build-dependencies]
bindgen = { version = "0.66", default-features = false, features = ["runtime"] }
metadeps = "1.1.2"
regex = "1.3.9"

[package.metadata.pkg-config]
ext2fs = "*"
